bk_ida/gccida/c2/start_function
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_function/src/c-decl.c:6682:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_function/src/c-decl.c:6701:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v29; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_function/src/c-decl.c:6926:12: error: expected expression
*( _OWORD *)&v25->parm_flag = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_function/src/c-decl.c:6926:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v25->parm_flag = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_function/src/c-decl.c:6927:12: error: expected expression
*( _OWORD *)&v25->this_block = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_function/src/c-decl.c:6927:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v25->this_block = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_function/src/c-decl.c:6928:12: error: expected expression
*( _OWORD *)&v25->shadowed = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_function/src/c-decl.c:6928:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v25->shadowed = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_function/src/c-decl.c:6929:12: error: expected expression
*( _OWORD *)&v25->names = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_function/src/c-decl.c:6929:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v25->names = 0LL; 
   ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_function/src/obj/c-decl.o] Error 1
